--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,19 @@ h2 {
     height: auto;
 }
 
+@media (min-width: 760px) {
+    .suma-logo {
+        width: 360px;
+        height: auto;
+    }
+
+    .hero-section h1 {
+        max-width: 500px;
+        font-size: 2rem;
+        line-height: 40px;
+    }
+}
+
 @media (min-width: 992px) {
 
     .hero-section {
@@ -237,6 +250,27 @@ form input[type="email"] {
     gap: 1rem;
 }
 
+@media (min-width: 760px) {
+    .partner-img-wrapper {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+    }
+
+    .partners-first-line-img {
+        gap: 2rem;
+        align-items: center;
+    }
+
+    .partners-second-line-img {
+        margin: 0;
+        gap: 2rem;
+        align-items: center;
+    }
+}
+
 @media (min-width: 993px) {
     .partner-img-wrapper {
         display: flex;
@@ -328,6 +362,38 @@ form input[type="email"] {
 
 .saas-section h2 span {
     color: #66B700;
+}
+
+@media (min-width: 760px) {
+    .image-large-screen {
+        display: inline;
+        width: auto;
+        height: 250px;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    .saas-section {
+        display: flex;
+        flex-direction: row;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+
+    .saas-section-text-btn {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        max-width: 70%;
+        margin-right: 1rem;
+    }
+    .saas-section p {
+        margin-bottom: 2rem;
+    }
+
+    .saas-section h2 {
+        font-size: 2rem;
+    }
 }
 
 @media (min-width: 992px) {
@@ -485,6 +551,34 @@ form input[type="email"] {
     color: #fff;
 }
 
+@media (min-width: 760px) {
+    .product-section h2 {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .platform-img {
+        max-width: 80%;
+        height: auto;
+        
+    }
+
+    .subheader-product-section {
+        text-align: center;
+        font-size: 1rem;
+        margin-bottom: 3rem;
+    }
+
+    .product-section-container {
+        margin-bottom: 4rem;
+    }
+
+    .product-section-title {
+        font-size: 1.5rem;
+        font-weight: 400;
+    }
+}
+
 
 @media (min-width: 992px) {
     
@@ -602,6 +696,15 @@ form input[type="email"] {
 .join-twitter-section a:hover {
     background-color: #66B700;
     color: #fff;
+}
+
+@media (min-width: 760px) {
+    .join-twitter-section p {
+        font-size: 1.5rem;
+        margin-left: 1em;
+        margin-right: 1em;
+        font-weight: 400;
+    }
 }
 
 
