--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,132 @@ h2 {
 
 /* HERO SECTION */
 
+/* NAV MENU */
+#top-nav {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
+    z-index: 100;
+    max-width: 1400px;
+}
+
+#nav-links-desktop-wrapper {
+    display: none;
+}
+
+.desktop-nav-link {
+    color: #FFF4CF;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+.current-page {
+    font-weight: bold;
+}
+
+.desktop-nav-link:not(:last-child) {
+    margin-right: 2rem;
+}
+
+.desktop-nav-link:hover {
+    text-decoration: underline;
+}
+
+#icon-wrapper {
+    position: relative;
+    z-index: 101;
+}
+
+
+#nav-links {
+    display: none;
+}
+
+#nav-links-mobile {
+    height: 100%;
+    width: 0;
+    background-color: #333;
+    overflow: hidden;
+    transition: width 0.5s ease;
+    position: fixed;
+    top: 0;
+    right: 0;
+    
+}
+
+.nav-links-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-top: 5rem;
+    height: 100%;
+ 
+}
+
+.no-scroll {
+    overflow: hidden;
+    height: 100%;
+}
+
+.mobile-link {
+    padding: 1rem;
+    
+}
+
+.mobile-link:first-child {
+    padding-top: 2rem;
+}
+
+.nav-icon {
+    width: 2rem;
+    height: 2rem;
+}
+
+
+
+
+
+
+#logo {
+    height: 50px;
+}
+
+.nav-link {
+    color: #FFF4CF;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+@media (min-width: 1200px) {
+    #logo {
+        height: 75px;
+    }
+}
+
+@media (min-width: 500px) {
+    #icon-wrapper {
+        display: none;
+    }
+
+    #nav-links-desktop-wrapper {
+        display: flex;
+
+    }
+    
+}
+
+
+/* NAV ENDS */
+
 .hero-section {
     background-image: url(img/hero-bg-img.png);
     background-repeat: no-repeat;
@@ -36,6 +162,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .hero-section h1 {
@@ -47,10 +174,10 @@ h2 {
     
 }
 
-#signUpButton {
+.signUpButton {
     text-decoration: none;
     padding: 1rem 1.5rem;
-    background-color: #66B700;
+    background-color: #F19837;
     color: #1A2421;
     border-radius: 7px;
     font-weight: 600;
@@ -63,7 +190,7 @@ h2 {
     cursor: pointer;
 }
 
-#signUpButton:hover {
+.signUpButton:hover {
     background-color: #1A2421;
     color: #fff;
 }
@@ -120,6 +247,8 @@ h2 {
     }
 }
 
+
+
 /* SIGN UP FORM */
 
 #signUpModal.modal {
@@ -161,6 +290,7 @@ h2 {
     cursor: pointer;
 }
 
+
 .cta-button {
     background-color: #1A2421;
     border-radius: 5px;
@@ -198,7 +328,10 @@ form input[type="email"] {
     border-radius: 5px;
 }
 
-/* PARTNERS AND INFRASTRUCTURE PROVIDERS */
+/* PARTNERS AND INFRASTRUCTURE PROVIDERS 
+------------------------------------------
+------------------------------------------
+*/
 
 .partners-line {
     display: flex;
@@ -208,6 +341,7 @@ form input[type="email"] {
     background-color: #FFEEB6;
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+    
 }
 
 .partners-line p {
@@ -219,13 +353,14 @@ form input[type="email"] {
 .partners-first-line-img {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    justify-content: center;
+    gap: 1rem;    
 
 }
 
 .partner-logo {
     width: auto;
-    height: 30px;
+    height: 25px;
 }
 
 .chainlink-logo {
@@ -235,7 +370,7 @@ form input[type="email"] {
 
 .shima-logo {
     width: auto;
-    height: 25px;
+    height: 20px;
 }
 
 .albo-logo {
@@ -243,11 +378,23 @@ form input[type="email"] {
     margin-bottom: auto;
 }
 
+.spacetime-logo {
+    height: 20px;
+    width: auto;
+}
+
 .partners-second-line-img {
     display: flex;
     justify-content: center;
     margin-top: 1rem;
     gap: 1rem;
+}
+
+@media (max-width: 332px) {
+    .partner-logo {
+        width: auto;
+        height: 15px;
+    }
 }
 
 @media (min-width: 760px) {
@@ -305,6 +452,11 @@ form input[type="email"] {
         width: auto;
         height: 29px;
     }
+
+    .spacetime-logo {
+        width: auto;
+        height: 30px;
+    }
 }
 
 
@@ -315,7 +467,7 @@ form input[type="email"] {
     display: none;
 }
 .saas-section-wrapper {
-    background-color: #fff;
+    background-color: #FFFCF6;
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
@@ -336,7 +488,7 @@ form input[type="email"] {
 #saasBtn {
     text-decoration: none;
     padding: 1rem 1.5rem;
-    background-color: #66B700;
+    background-color: #F19837;
     color: #1A2421;
     border-radius: 7px;
     font-weight: 600;
@@ -350,8 +502,8 @@ form input[type="email"] {
 }
 
 #saasBtn:hover {
-    background-color: #1A2421;
-    color: #fff;
+    background-color: #FFFCF6;
+    color: #F19837;
 }
 
 .saas-section p {
@@ -361,7 +513,7 @@ form input[type="email"] {
 }
 
 .saas-section h2 span {
-    color: #66B700;
+    color: #F19837;
 }
 
 @media (min-width: 760px) {
@@ -495,13 +647,13 @@ form input[type="email"] {
 }
 
 .product-section span {
-    color: #66B700;
+    color: #F19837;
 }
 
 .section-number {
     font-size: 2rem;
     font-weight: 600;
-    color: #66B700;
+    color: #F19837;
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
@@ -536,7 +688,7 @@ form input[type="email"] {
 
 .product-section-btn {
     text-decoration: none;
-    padding: 1rem 5rem;
+    padding: 1rem 1.5rem;
     background-color: #fff;
     color: #1A2421;
     border-radius: 7px;
@@ -549,6 +701,17 @@ form input[type="email"] {
 .product-section-btn:hover {
     background-color: #1A2421;
     color: #fff;
+}
+
+
+/* max width 290px is for Galaxy Fold */
+@media (max-width: 320px) {
+    .product-section-btn {
+        margin-left: auto;
+        margin-right: auto;
+        padding: 1rem 2rem;
+
+    }
 }
 
 @media (min-width: 760px) {
@@ -651,7 +814,125 @@ form input[type="email"] {
     }
 }
 
-/* JOIN TWITTER SECTION */
+/* WHO IS SUMA FOR SECTION START
+------------------------------------------
+*/
+
+.who-is-suma-for-section-wrapper {
+    background-color: #FFFCF6;
+}
+
+.who-is-suma-for-section {
+    background-color: #FFFCF6;
+    padding-top: 4rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 0;
+
+}
+
+.who-is-suma-for-section-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 4rem;
+}
+
+.who-is-suma-for-section-btn a {
+    text-decoration: none;
+    padding: 1rem 1.5rem;
+    background-color: #F19837;
+    color: #fff;
+    border-radius: 7px;
+    font-weight: 600;
+    transition: background-color 0.2s ease;
+}
+
+.who-is-suma-for-section-btn a:hover {
+    background-color: #FFFCF6;
+    color: #F19837;
+}
+
+.who-is-suma-for-title-body {
+    text-align: center;
+}
+
+.who-is-suma-for-title-body h2 {
+    font-weight: 400;
+}
+
+.who-is-suma-for-title-body h2 span {
+    color: #F19837;
+}
+
+.suma-for-container {
+    background-color: #FFFFFF;
+    padding: 2rem 1rem;
+    margin-top: 2rem;
+    border-radius: 16px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+}
+
+
+
+.suma-for-subtitle {
+    font-size: 1.125rem;
+    font-weight: 600;
+    color: #F19837;
+    margin: 0;
+    padding-top: 0.2rem;
+    padding-bottom: 0.5rem;
+}
+
+.suma-for-body-text {
+    margin: 0;
+}
+
+.who-is-suma-icon {
+    height: 35px;
+    width: auto;
+}
+
+/* MEDIA QUERY FOR DESKTOP SIZES */
+
+@media (min-width: 760px) {
+    .who-is-suma-for-title-body h2 {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 992px) {
+    .who-is-suma-for-section {
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 5rem;
+    }
+
+    .who-is-suma-for-containers-wrapper {
+        display: flex;
+        flex-direction: row;
+        gap: 1.25rem;
+    }
+
+}
+
+@media (min-width: 1200px) {
+    .who-is-suma-for-section {
+        max-width: 1200px;
+    }
+
+    .who-is-suma-for-title-body h2 {
+        font-size: 2.5rem;
+    }
+}
+
+
+/* JOIN TWITTER SECTION START
+---------------------------------------
+---------------------------------------
+---------------------------------------
+*/
 
 .join-twitter-section-wrapper {
     background-color: #FFFCF6;
@@ -662,7 +943,7 @@ form input[type="email"] {
 }
 
 .join-twitter-section {
-    background-color: #66B700;
+    background-color: #F19837;
     border-radius: 7px;
     margin: 0 1.5rem;
     padding: 3rem .5rem;
@@ -694,7 +975,7 @@ form input[type="email"] {
 }
 
 .join-twitter-section a:hover {
-    background-color: #66B700;
+    background-color: #F19837;
     color: #fff;
 }
 
@@ -740,7 +1021,11 @@ form input[type="email"] {
     }
 }
 
-/* FOOTER */
+/* FOOTER START
+---------------------------------------
+---------------------------------------
+---------------------------------------
+*/
 
 footer {
     background-color: #FFEEB6;
@@ -749,7 +1034,7 @@ footer {
 .footer-wrapper {
     display: flex;
     flex-direction: row;
-    padding-top: 2.5rem;
+    padding-top: 2rem;
     padding-bottom: 1.5rem;
     padding-right: 1.5rem;
     padding-left: 1.5rem;
@@ -767,21 +1052,22 @@ footer {
     width: 40px;
     height: auto;
     margin-left: 1rem;
-    margin-top: auto;
-    margin-bottom: auto;
+    
 }
 
 .copyright-company-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+   
 }
 
 .copyright-company-container p {
     text-align: center;
-    font-size: 0.75rem;
+    font-size: 0.8rem;
     margin-top: 0;
     font-weight: 600;
+    padding-top: 1rem;
     
 }
 
@@ -789,6 +1075,16 @@ footer {
     text-decoration: underline;
     color: #1A2421;
 }
+
+/* GALAXY FOLD MEDIA QUERY */
+
+@media(max-width: 290px) {
+    .social-links-footer img {
+        width: 30px;
+    }
+}
+
+/* DESKTOP MEDIA QUERY */
 
 @media(min-width: 992px) {
     .copyright-company-container {
@@ -800,6 +1096,10 @@ footer {
         margin-left: auto;
         margin-right: auto;
     }
+
+    .copyright-company-container p {
+        font-size: 0.8rem;
+    } 
 }
 
 @media(min-width: 1200px) {
@@ -808,3 +1108,381 @@ footer {
     }
 }
 
+
+/* DOCUMENTS PAGE START
+---------------------------------------
+---------------------------------------
+---------------------------------------
+*/
+
+/* GENERAL */
+
+#documents-page {
+    background-color: #FFFCF6;
+}
+
+/* NAV MENU */
+
+
+.docs-page-nav-links a {
+    color: #000;
+}
+
+.current-page {
+    font-weight: bold;
+}
+
+@media (min-width: 1200px) {
+    #top-nav {
+        max-width: 1200px;
+    }
+}
+
+.nav-icon-docs {
+    color:#000;
+}
+
+
+/* HERO SECTION */
+
+.hero-section-docs-wrapper {
+    margin-top: 160px;
+    padding-left: 1rem;
+    padding-right: 1rem;   
+}
+
+.hero-section-documents-page h3 {
+    text-transform:uppercase;
+    font-size: 1.25rem;
+    font-weight: 400;
+    color: #F19837;
+}
+
+.hero-section-documents-page h1 {
+    line-height: 40px;
+    color: #1A2421;
+}
+
+.hero-section-documents-page p {
+    padding-bottom: 1rem;
+    color: #1A2421;
+}
+
+.hero-section-img-docs,
+.token-economics-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+.hero-section-btn-docs {
+    text-decoration: none;
+    padding: 1rem 1.5rem;
+    background-color: #F19837;
+    color: #FFFCF6;
+    border-radius: 7px;
+    font-weight: 600;
+    transition: background-color 0.2s ease;
+    text-decoration: none;
+    border: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.hero-section-btn-docs:hover {
+    background-color: #FFFCF6;
+    color: #F19837;
+}
+
+.litepaper-image,
+.token-economics-image {
+    width: 75%;
+    margin-top: 2rem;
+    padding-bottom: 3rem;
+}
+
+@media (min-width: 500px) {
+    .hero-section-btn-docs {
+        display: inline;
+    }
+
+    .hero-section-content-docs p {
+        padding-bottom: 1.5rem;
+    }
+}
+
+@media (min-width: 720px) {
+    .hero-section-documents-page {
+        display: flex;
+        flex-direction: row;
+        margin-left: 1rem;
+    }
+
+    .hero-section-content-docs {
+        max-width: 50%;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-bottom: 170px;
+    }
+
+    .hero-section-img-docs {
+        margin-left: auto;
+    }
+    
+}
+
+@media(min-width: 992px) {
+    .hero-section-documents-page {
+        display: flex;
+        flex-direction: row;
+        margin-left: 1rem;
+    }
+
+    .hero-section-content-docs {
+        max-width: 50%;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-bottom: 170px;
+    }
+
+    .hero-section-btn-docs {
+        display: inline;
+        width: auto;
+    }
+
+    .hero-section-img-docs {
+        margin-left: auto;
+        margin-top: auto;
+        margin-bottom: 50px;
+    
+    }
+
+    .hero-section-documents-page h1 {
+        max-width: 450px;
+        font-size: 2.5rem;
+        line-height: 50px;
+        font-weight: 600;
+        
+    }
+
+    
+}
+
+@media (min-width: 1200px) {
+     .hero-section-docs-wrapper {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .hero-section-img-docs {
+        margin-right: 0;
+        padding: 0;
+    }
+}
+
+/* TOKEN SECTION */
+
+.token-section-wrapper {
+    background-color: #1A2421;
+    padding-top: 4rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+}
+
+.token-section h3 {
+    color: #F19837;
+    text-transform:uppercase;
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin-top: 4rem;
+}
+
+.token-section h1 {
+    color: #FFFCF6;
+    max-width: 450px;
+    font-size: 2.5rem;
+    line-height: 50px;
+    font-weight: 600;
+    padding-bottom: 0.5rem;
+}
+
+.token-section p {
+    color: #FFFCF6;
+    padding-bottom: 2rem;
+
+}
+
+.token-economics-btn {
+    color: #FFFCF6;
+}
+
+.token-economics-btn:hover {
+    color: #F19837;
+    background-color: #1A2421;
+}
+
+@media (min-width: 720px) {
+    .token-section {
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .token-section-content {
+        order: 2;
+        max-width: 50%;
+        margin-left: auto;
+        margin-top: auto;
+        margin-bottom: 140px;
+        padding: 0;
+        
+    }
+}
+
+@media (min-width: 992px) {
+    .token-section {
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .token-section-content {
+        order: 2;
+        max-width: 50%;
+        margin-left: auto;
+        margin-top: auto;
+        margin-bottom: 170px;
+        padding: 0;
+        
+
+    }
+
+    .token-economics-img {
+        order: 1;
+        margin-top: auto;
+        margin-bottom: auto;
+        padding-bottom: 3rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .token-section {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+/* JOIN NEWSLETTER SECTION */
+
+.signup-newsletter-wrapper {
+    background-color: #FFFCF6;
+    margin: 0;
+    padding: 6rem 0;
+    
+    
+}
+
+.signup-newsletter-section {
+    background-color: #F19837;
+    border-radius: 7px;
+    margin: 0 1.5rem;
+    padding: 3rem .5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+
+}
+
+.signup-newsletter-section p {
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    font-weight: 500;
+    padding-bottom: 1em;
+}
+
+.newsletter-btn-docs {
+    text-decoration: none;
+    padding: 1rem 1.5rem;
+    background-color: #fff;
+    color: #000;
+    border-radius: 7px;
+    font-weight: 600;
+    margin: auto;
+    transition: background-color 0.2s ease;
+    border: none;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    color: #1A2421;
+    cursor: pointer;
+}
+
+.newsletter-btn-docs:hover {
+    background-color: #F19837;
+    color: #fff;
+}
+
+/* SMALL SCREEN MOBILE */
+
+@media (max-width: 340px) {
+    .newsletter-btn-docs {
+        font-size: 0.8rem;
+    }
+}
+
+/* TABLET */
+
+@media (min-width: 760px) {
+    .signup-newsletter-section p {
+        font-size: 1.5rem;
+        margin-left: 1em;
+        margin-right: 1em;
+        font-weight: 400;
+    }
+}
+
+/* DESKTOP */
+
+@media (min-width: 992px) {
+    
+    .signup-newsletter-section {
+        margin-left: 3rem;
+        margin-right: 3rem;
+        padding-top: 7rem;
+        padding-bottom: 7rem;
+        border-radius: 24px;
+    }
+
+    .signup-newsletter-section p {
+        font-size: 2rem;
+        margin-left: 1em;
+        margin-right: 1em;
+        font-weight: 400;
+    }
+}
+
+@media (min-width: 1200px) {
+    .signup-newsletter-section {
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .signup-newsletter-section p {
+        max-width: 75%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
